Changed imports in the Notebooks to adapt them to the new structure. Minor changes in some notebooks in some functions that got renamed.

--- a/notebooks/Federating a clustering model.ipynb
+++ b/notebooks/Federating a clustering model.ipynb
@@ -138,7 +138,8 @@
    "outputs": [],
    "source": [
     "from flex.pool import init_server_model\n",
-    "from flex.pool import FlexPool, FlexModel\n",
+    "from flex.pool import FlexPool\n",
+    "from flex.model import FlexModel\n",
     "\n",
     "\n",
     "@init_server_model\n",
@@ -359,13 +360,6 @@
     "score_model(test_iris.y_data, preds)\n",
     "plot_k_means(centralized_model, test_iris.X_data, title=\"K-means using centralized data\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
