--- a/notebooks/flex_mnist_classification_tensorflow_simplified.ipynb
+++ b/notebooks/flex_mnist_classification_tensorflow_simplified.ipynb
@@ -67,13 +67,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from flex.pool.flex_primitives import init_server_model_tf\n",
-    "from flex.pool.flex_primitives import deploy_server_model_tf\n",
-    "from flex.pool.flex_primitives import collect_clients_weights_tf\n",
-    "from flex.pool.flex_primitives import train_tf\n",
-    "from flex.pool.flex_primitives import set_aggregated_weights_tf\n",
-    "from flex.pool.flex_primitives import evaluate_server_model_tf\n",
-    "from flex.pool.flex_aggregators import fed_avg"
+    "from flex.pool.primitives import init_server_model_tf\n",
+    "from flex.pool.primitives import deploy_server_model_tf\n",
+    "from flex.pool.primitives import collect_clients_weights_tf\n",
+    "from flex.pool.primitives import train_tf\n",
+    "from flex.pool.primitives import set_aggregated_weights_tf\n",
+    "from flex.pool.primitives import evaluate_server_model_tf\n",
+    "from flex.pool.aggregators import fed_avg"
    ]
   },
   {
@@ -135,13 +135,6 @@
     "print(f\"LENGTH: Client nodes are identified by {len(clients.actor_ids)}\")\n",
     "print(f\"LENGTH: Client nodes are identified by {len(total_clients.actor_ids)}\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
