--- a/notebooks/flex_mnist_classification_tensorflow_with_decorators.ipynb
+++ b/notebooks/flex_mnist_classification_tensorflow_with_decorators.ipynb
@@ -45,7 +45,8 @@
    "outputs": [],
    "source": [
     "from flex.pool import init_server_model\n",
-    "from flex.pool import FlexPool, FlexModel\n",
+    "from flex.pool import FlexPool\n",
+    "from flex.model import FlexModel\n",
     "\n",
     "def build_server_model(*args):\n",
     "    flex_model = FlexModel()\n",
