--- a/notebooks/flex_text_classification_tensorflow_simplified.ipynb
+++ b/notebooks/flex_text_classification_tensorflow_simplified.ipynb
@@ -99,13 +99,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from flex.pool.flex_primitives import init_server_model_tf\n",
-    "from flex.pool.flex_primitives import deploy_server_model_tf\n",
-    "from flex.pool.flex_primitives import collect_clients_weights_tf\n",
-    "from flex.pool.flex_primitives import train_tf\n",
-    "from flex.pool.flex_primitives import set_aggregated_weights_tf\n",
-    "from flex.pool.flex_primitives import evaluate_server_model_tf\n",
-    "from flex.pool.flex_aggregators import fed_avg"
+    "from flex.pool.primitives import init_server_model_tf\n",
+    "from flex.pool.primitives import deploy_server_model_tf\n",
+    "from flex.pool.primitives import collect_clients_weights_tf\n",
+    "from flex.pool.primitives import train_tf\n",
+    "from flex.pool.primitives import set_aggregated_weights_tf\n",
+    "from flex.pool.primitives import evaluate_server_model_tf\n",
+    "from flex.pool.aggregators import fed_avg"
    ]
   },
   {
@@ -247,7 +247,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Putting it all together"
+    "# Putting it all together"
    ]
   },
   {
@@ -282,13 +282,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# END"
+    "# END"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
   }
  ],
  "metadata": {
