--- a/notebooks/flex_text_classification_tensorflow_with_decorators.ipynb
+++ b/notebooks/flex_text_classification_tensorflow_with_decorators.ipynb
@@ -27,8 +27,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "train_data, test_data = tfds.load(name=\"imdb_reviews\", split=[\"train\", \"test\"], \n",
-    "                                    batch_size=-1, as_supervised=True)"
+    "train_data, test_data = tfds.load(name=\"imdb_reviews\", split=[\"train\", \"test\"])"
    ]
   },
   {
@@ -39,7 +38,7 @@
    "source": [
     "from flex.data import Dataset\n",
     "\n",
-    "flex_data = Dataset.from_tfds_dataset(train_data)"
+    "flex_data = Dataset.from_tfds_text_dataset(train_data, X_columns='text', label_columns='label')"
    ]
   },
   {
@@ -74,14 +73,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from flex.pool.flex_primitives import deploy_model_to_clients\n",
-    "from flex.pool.flex_primitives import evaluate_model\n",
+    "from flex.pool.primitives import deploy_server_model_tf\n",
+    "from flex.pool.primitives import evaluate_server_model_tf\n",
     "\n",
-    "from flex.pool.flex_decorators import init_server_model_decorator\n",
-    "from flex.pool.flex_decorators import collector_decorator\n",
-    "from flex.pool.flex_decorators import aggregator_decorator_tf\n",
-    "from flex.pool.flex_decorators import train_decorator\n",
-    "from flex.pool.flex_decorators import deploy_decorator"
+    "from flex.pool.decorators import init_server_model\n",
+    "from flex.pool.decorators import collect_clients_weights\n",
+    "from flex.pool.decorators import aggregate_weights\n",
+    "from flex.pool.decorators import deploy_server_model"
    ]
   },
   {
@@ -91,7 +89,7 @@
    "outputs": [],
    "source": [
     "# Defining the model\n",
-    "@init_server_model_decorator\n",
+    "@init_server_model\n",
     "def define_model(*args):\n",
     "    model = \"https://tfhub.dev/google/nnlm-en-dim110-with-normalization/2\"\n",
     "    hub_layer = hub.KerasLayer(model, input_shape=[], dtype=tf.string, trainable=True)\n",
@@ -113,7 +111,7 @@
    "source": [
     "from flex.pool import FlexPool\n",
     "\n",
-    "flex_pool = FlexPool.client_server_architecture(fed_dataset=flex_dataset, init_func=define_model, verbose=1, model_params=[])"
+    "flex_pool = FlexPool.client_server_architecture(fed_dataset=flex_dataset, init_func=define_model)"
    ]
   },
   {
@@ -134,7 +132,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "server.map(deploy_model_to_clients, clients, verbose=1)"
+    "server.map(define_model, clients, verbose=1)"
    ]
   },
   {
@@ -143,7 +141,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "@train_decorator\n",
     "def fit_tf(model, X_data, y_data, *args, **kwargs):\n",
     "    model.fit(X_data, y_data, *args, **kwargs)"
    ]
@@ -173,7 +170,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "@collector_decorator\n",
+    "@collect_clients_weights\n",
     "def tensorflow_weights_collector(client_model):\n",
     "    return client_model.get_weights()"
    ]
@@ -193,7 +190,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "@aggregator_decorator_tf\n",
+    "@aggregate_weights\n",
     "def fed_avg(agg_model):\n",
     "    return np.mean(np.array(agg_model), axis=0)"
    ]
@@ -244,7 +241,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "server.map(evaluate_model, test_examples=test_examples, test_labels=test_labels)"
+    "server.map(evaluate_server_model_tf, test_examples=test_examples, test_labels=test_labels)"
    ]
   },
   {
@@ -253,7 +250,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "clients.map(evaluate_model, test_examples=test_examples, test_labels=test_labels)"
+    "clients.map(evaluate_server_model_tf, test_examples=test_examples, test_labels=test_labels)"
    ]
   },
   {
@@ -275,11 +272,11 @@
     "    for i in range(n_rounds):\n",
     "        print(f\"\\nRunning round: {i}\\n\")\n",
     "        pool.clients.map(fit_tf, batch_size=batch_size, epochs=epochs, verbose=1)\n",
-    "        pool.clients.map(evaluate_model, test_examples=test_examples, test_labels=test_labels)\n",
+    "        pool.clients.map(evaluate_server_model_tf, test_examples=test_examples, test_labels=test_labels)\n",
     "        pool.clients.map(tensorflow_weights_collector, pool.aggregators, verbose=1)\n",
     "        pool.aggregators.map(fed_avg, verbose=1)\n",
     "        pool.servers.map(deploy_global_model, pool.clients)\n",
-    "        pool.servers.map(evaluate_model, test_examples=test_examples, test_labels=test_labels)"
+    "        pool.servers.map(evaluate_server_model_tf, test_examples=test_examples, test_labels=test_labels)"
    ]
   },
   {
