--- a/notebooks/flex_mnist_classification_tensorflow_simplified.ipynb
+++ b/notebooks/flex_mnist_classification_tensorflow_simplified.ipynb
@@ -41,17 +41,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from flex.data import FedDataDistribution, Dataset\n",
+    "from flex.data import Dataset\n",
+    "from flex.datasets import load\n",
+    "\n",
     "import numpy as np\n",
     "\n",
-    "flex_dataset, test_data =  FedDataDistribution.FederatedEMNIST(return_test=True)\n",
+    "flex_dataset, test_data = load(\"federated_emnist\", return_test=True, split=\"digits\")\n",
     "\n",
     "def remove_writer_from_y_data(client_dataset: Dataset):\n",
     "    new_x_data = client_dataset.X_data\n",
     "    new_y_data = np.asarray([y[0] for y in client_dataset.y_data])  # each label is a tuple (mnist_label, writer), so we remove the writer\n",
     "    return Dataset(new_x_data, new_y_data)\n",
     "\n",
-    "flex_dataset = flex_dataset.map(remove_writer_from_y_data)\n"
+    "flex_dataset = flex_dataset.map(remove_writer_from_y_data)\n",
+    "test_data = remove_writer_from_y_data(test_data)\n"
    ]
   },
   {
@@ -251,18 +254,11 @@
    "source": [
     "train_n_rounds(n_rounds=2, batch_size=512, epochs=5)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.13 ('snowflakes')",
+   "display_name": "Python 3.9.5 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -276,12 +272,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.9.5"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "e566fdd1bb8982d94cfadd1b83b7d24c79e08c8cc9caeab62a639b678958baae"
+    "hash": "f9f85f796d01129d0dd105a088854619f454435301f6ffec2fea96ecbd9be4ac"
    }
   }
  },
