Solved errors on some notebooks. Now the models can be trained using the decorators.

--- a/notebooks/flex_mnist_classification_tensorflow_with_decorators.ipynb
+++ b/notebooks/flex_mnist_classification_tensorflow_with_decorators.ipynb
@@ -25,10 +25,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from flex.data import FedDataDistribution, Dataset\n",
+    "from flex.data import Dataset\n",
+    "from flex.datasets import load\n",
     "import numpy as np\n",
     "\n",
-    "flex_dataset, test_data =  FedDataDistribution.FederatedEMNIST(return_test=True)\n",
+    "flex_dataset, test_data = load(\"federated_emnist\", return_test=True, split=\"digits\")\n",
     "\n",
     "def remove_writer_from_y_data(client_dataset: Dataset):\n",
     "    new_x_data = client_dataset.X_data\n",
@@ -48,10 +49,11 @@
     "from flex.pool import FlexPool\n",
     "from flex.model import FlexModel\n",
     "\n",
+    "@init_server_model\n",
     "def build_server_model(*args):\n",
     "    flex_model = FlexModel()\n",
     "\n",
-    "    flex_model.model = tf.keras.models.Sequential([\n",
+    "    flex_model[\"model\"] = tf.keras.models.Sequential([\n",
     "    tf.keras.layers.Flatten(input_shape=(28, 28)),\n",
     "    tf.keras.layers.Dense(128, activation='relu'),\n",
     "    #tf.keras.layers.Dropout(0.2),\n",
@@ -87,12 +89,10 @@
    "outputs": [],
    "source": [
     "#Filter clients\n",
-    "filtered_pool = p.filter(node_dropout=0.9)\n",
+    "filtered_pool = p.filter(node_dropout=0.99)\n",
     "\n",
     "clients = filtered_pool.clients\n",
     "total_clients = p.clients\n",
-    "servers = p.servers\n",
-    "aggregators = p.aggregators\n",
     "\n",
     "\n",
     "print(f\"Number of nodes in the pool {len(p)}: {len(servers)} servers plus {len(clients)} clients. The server is also an aggregator\")\n",
@@ -117,6 +117,7 @@
     "\n",
     "    return flex_model\n",
     "\n",
+    "\n",
     "servers.map(copy_server_model_to_clients, clients)"
    ]
   },
@@ -129,7 +130,8 @@
     "from flex.data import Dataset\n",
     "\n",
     "def train(client_flex_model: FlexModel, client_data: Dataset):\n",
-    "    client_flex_model.model.fit(client_data.X_data, client_data.y_data)\n",
+    "    print(type(client_flex_model))\n",
+    "    client_flex_model[\"model\"].fit(client_data.X_data, client_data.y_data)\n",
     "\n",
     "clients.map(train)"
    ]
@@ -250,13 +252,6 @@
     "print(\"Federated model scores\")\n",
     "servers.map(evaluate_global_model, test_data=test_data)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
