--- a/notebooks/flex_text_classification_tensorflow_with_decorators.ipynb
+++ b/notebooks/flex_text_classification_tensorflow_with_decorators.ipynb
@@ -79,7 +79,9 @@
     "from flex.pool.decorators import init_server_model\n",
     "from flex.pool.decorators import collect_clients_weights\n",
     "from flex.pool.decorators import aggregate_weights\n",
-    "from flex.pool.decorators import deploy_server_model"
+    "from flex.pool.decorators import deploy_server_model\n",
+    "from flex.pool.decorators import set_aggregated_weights\n",
+    "from flex.model import FlexModel"
    ]
   },
   {
@@ -91,7 +93,9 @@
     "# Defining the model\n",
     "@init_server_model\n",
     "def define_model(*args):\n",
-    "    model = \"https://tfhub.dev/google/nnlm-en-dim110-with-normalization/2\"\n",
+    "    from copy import deepcopy\n",
+    "    # model = \"https://tfhub.dev/google/nnlm-en-dim110-with-normalization/2\"\n",
+    "    model = \"https://tfhub.dev/google/nnlm-en-dim50/2\"\n",
     "    hub_layer = hub.KerasLayer(model, input_shape=[], dtype=tf.string, trainable=True)\n",
     "    model = tf.keras.Sequential()\n",
     "    model.add(hub_layer)\n",
@@ -100,7 +104,12 @@
     "    model.compile(optimizer='adam',\n",
     "                    loss=tf.losses.BinaryCrossentropy(from_logits=True),\n",
     "                    metrics=[tf.metrics.BinaryAccuracy(threshold=0.0, name='accuracy')])\n",
-    "    return model"
+    "    server_flex_model = FlexModel()\n",
+    "    server_flex_model[\"model\"] = model\n",
+    "    server_flex_model[\"loss\"] = deepcopy(model.loss)\n",
+    "    server_flex_model[\"metrics\"] = deepcopy(model.compiled_metrics._metrics)\n",
+    "    server_flex_model[\"optimizer\"] = deepcopy(model.optimizer)\n",
+    "    return server_flex_model"
    ]
   },
   {
@@ -129,10 +138,35 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "outputs": [],
+   "source": [
+    "from flex.model import FlexModel\n",
+    "\n",
+    "@deploy_server_model\n",
+    "def copy_model_to_clients(server_flex_model, *args, **kwargs):\n",
+    "    client_flex_model = FlexModel()\n",
+    "    weights = server_flex_model[\"model\"].get_weights()\n",
+    "    model = tf.keras.models.clone_model(server_flex_model[\"model\"])\n",
+    "    model.set_weights(weights)\n",
+    "    model.compile(\n",
+    "        optimizer=server_flex_model[\"optimizer\"],\n",
+    "        loss=server_flex_model[\"loss\"],\n",
+    "        metrics=server_flex_model[\"metrics\"]\n",
+    "    )\n",
+    "    client_flex_model[\"model\"] = model\n",
+    "    return client_flex_model"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "server.map(define_model, clients, verbose=1)"
+    "server.map(copy_model_to_clients, clients)"
    ]
   },
   {
@@ -141,8 +175,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def fit_tf(model, X_data, y_data, *args, **kwargs):\n",
-    "    model.fit(X_data, y_data, *args, **kwargs)"
+    "def fit_tf(client_flex_model, client_data, *args, **kwargs):\n",
+    "    client_flex_model[\"model\"].fit(client_data.X_data, client_data.y_data, *args, **kwargs)"
    ]
   },
   {
@@ -172,7 +206,7 @@
    "source": [
     "@collect_clients_weights\n",
     "def tensorflow_weights_collector(client_model):\n",
-    "    return client_model.get_weights()"
+    "    return client_model[\"model\"].get_weights()"
    ]
   },
   {
@@ -181,7 +215,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "clients.map(tensorflow_weights_collector, aggregator)"
+    "aggregator.map(tensorflow_weights_collector, clients)"
    ]
   },
   {
@@ -201,7 +235,40 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "aggregator.map(fed_avg, verbose=1)"
+    "aggregator.map(fed_avg)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "@set_aggregated_weights\n",
+    "def set_aggregated_weights_tf(server_flex_model, aggregated_weights, *args, **kwargs):\n",
+    "    server_flex_model[\"model\"].set_weights(aggregated_weights)"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "aggregator.map(set_aggregated_weights_tf, server)"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "server.map(copy_model_to_clients, clients)"
    ]
   },
   {
@@ -210,11 +277,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "@deploy_decorator\n",
-    "def deploy_global_model(server_model, clients_models):\n",
-    "    aggregated_weights = server_model.get_weights()\n",
-    "    for client_model in clients_models:\n",
-    "        clients_models[client_model][\"model\"].set_weights(aggregated_weights)"
+    "test_data = Dataset.from_tfds_text_dataset(test_data, X_columns='text', label_columns='label')\n",
+    "test_examples, test_labels = test_data.X_data, test_data.y_data"
    ]
   },
   {
@@ -223,7 +287,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "server.map(deploy_global_model, clients)"
+    "server.map(evaluate_server_model_tf, test_data=test_examples, test_labels=test_labels)"
    ]
   },
   {
@@ -232,32 +296,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "test_examples, test_labels = test_data"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "server.map(evaluate_server_model_tf, test_examples=test_examples, test_labels=test_labels)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "clients.map(evaluate_server_model_tf, test_examples=test_examples, test_labels=test_labels)"
+    "clients.map(evaluate_server_model_tf, test_data=test_examples, test_labels=test_labels)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Putting it all together"
+    "# Putting it all together"
    ]
   },
   {
@@ -267,16 +313,17 @@
    "outputs": [],
    "source": [
     "def train_n_rounds(n_rounds, batch_size, epochs):\n",
-    "    pool = FlexPool.client_server_architecture(fed_dataset=flex_dataset, init_func=define_model, verbose=1, model_params=[])\n",
-    "    pool.servers.map(deploy_model_to_clients, pool.clients, verbose=1)\n",
+    "    pool = FlexPool.client_server_architecture(fed_dataset=flex_dataset, init_func=define_model)\n",
+    "    pool.servers.map(copy_model_to_clients, pool.clients, verbose=1)\n",
     "    for i in range(n_rounds):\n",
     "        print(f\"\\nRunning round: {i}\\n\")\n",
-    "        pool.clients.map(fit_tf, batch_size=batch_size, epochs=epochs, verbose=1)\n",
-    "        pool.clients.map(evaluate_server_model_tf, test_examples=test_examples, test_labels=test_labels)\n",
-    "        pool.clients.map(tensorflow_weights_collector, pool.aggregators, verbose=1)\n",
-    "        pool.aggregators.map(fed_avg, verbose=1)\n",
-    "        pool.servers.map(deploy_global_model, pool.clients)\n",
-    "        pool.servers.map(evaluate_server_model_tf, test_examples=test_examples, test_labels=test_labels)"
+    "        pool.clients.map(fit_tf, batch_size=batch_size, epochs=epochs)\n",
+    "        pool.clients.map(evaluate_server_model_tf, test_data=test_examples, test_labels=test_labels)\n",
+    "        pool.aggregators.map(tensorflow_weights_collector, pool.clients)\n",
+    "        pool.aggregators.map(fed_avg)\n",
+    "        pool.aggregators.map(set_aggregated_weights_tf, pool.servers)\n",
+    "        pool.servers.map(copy_model_to_clients, pool.clients)\n",
+    "        pool.servers.map(evaluate_server_model_tf, test_data=test_examples, test_labels=test_labels)"
    ]
   },
   {
@@ -292,7 +339,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# END"
+    "# END"
    ]
   }
  ],
