notebook missing doc, but ready

--- a/notebooks/flex_mnist_classification_tensorflow_simplified.ipynb
+++ b/notebooks/flex_mnist_classification_tensorflow_simplified.ipynb
@@ -1,6 +1,7 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -28,8 +29,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import tensorflow as tf\n",
+    "import os\n",
+    "os.environ['TF_CPP_MIN_LOG_LEVEL'] = '3'\n",
     "\n",
+    "import tensorflow as tf\n",
     "print(\"Version: \", tf.__version__)\n",
     "print(\"Eager mode: \", tf.executing_eagerly())\n",
     "print(\"GPU is\", \"available\" if tf.config.list_physical_devices('GPU') else \"NOT AVAILABLE\")"
@@ -58,6 +61,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -70,24 +74,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from flex.pool import FlexPool\n",
     "from flex.pool.primitives import init_server_model_tf\n",
-    "from flex.pool.primitives import deploy_server_model_tf\n",
-    "from flex.pool.primitives import collect_clients_weights_tf\n",
-    "from flex.pool.primitives import train_tf\n",
-    "from flex.pool.primitives import set_aggregated_weights_tf\n",
-    "from flex.pool.primitives import evaluate_server_model_tf\n",
-    "from flex.pool.aggregators import fed_avg"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Defining the model\n",
     "\n",
-    "def define_model(**kargs):\n",
+    "# Defining the model\n",
+    "def get_model():\n",
     "    model = tf.keras.models.Sequential([\n",
     "    tf.keras.layers.Flatten(input_shape=(28, 28)),\n",
     "    tf.keras.layers.Dense(128, activation='relu'),\n",
@@ -97,28 +88,9 @@
     "    model.compile(optimizer='adam',\n",
     "                loss='sparse_categorical_crossentropy',\n",
     "                metrics=['accuracy'])\n",
+    "    return model\n",
     "\n",
-    "    return model"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "model = define_model()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from flex.pool import FlexPool\n",
-    "\n",
-    "flex_pool = FlexPool.client_server_architecture(fed_dataset=flex_dataset, init_func=init_server_model_tf, model=define_model())"
+    "flex_pool = FlexPool.client_server_architecture(fed_dataset=flex_dataset, init_func=init_server_model_tf, model=get_model())"
    ]
   },
   {
@@ -128,29 +100,15 @@
    "outputs": [],
    "source": [
     "#Filter clients\n",
-    "filtered_pool = flex_pool.filter(node_dropout=0.99)\n",
-    "\n",
-    "clients = filtered_pool.clients\n",
+    "clients_per_round=20\n",
+    "node_dropout = 1-(clients_per_round/len(flex_pool.clients))\n",
+    "selected_clients_pool = flex_pool.clients.filter(node_dropout=node_dropout)\n",
+    "selected_clients = selected_clients_pool.clients\n",
     "total_clients = flex_pool.clients\n",
     "server = flex_pool.servers\n",
-    "print(f\"Server node is indentified by {server.actor_ids}\")\n",
     "\n",
-    "print(f\"LENGTH: Client nodes are identified by {len(clients.actor_ids)}\")\n",
-    "print(f\"LENGTH: Client nodes are identified by {len(total_clients.actor_ids)}\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "server.map(deploy_server_model_tf, clients)"
+    "print(f\"Server node is indentified by key \\\"{server.actor_ids[0]}\\\"\")\n",
+    "print(f\"Selected {len(selected_clients.actor_ids)} client nodes of a total of {len(total_clients.actor_ids)}\")"
    ]
   },
   {
@@ -159,7 +117,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "clients.map(train_tf, batch_size=512, epochs=1)"
+    "from flex.pool.primitives import deploy_server_model_tf\n",
+    "\n",
+    "server.map(deploy_server_model_tf, selected_clients)"
    ]
   },
   {
@@ -168,7 +128,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "aggregator = flex_pool.aggregators\n"
+    "from flex.pool.primitives import train_tf\n",
+    "\n",
+    "selected_clients.map(train_tf, batch_size=512, epochs=1, verbose=False)"
    ]
   },
   {
@@ -177,7 +139,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "aggregator.map(collect_clients_weights_tf, clients)"
+    "from flex.pool.primitives import collect_clients_weights_tf\n",
+    "\n",
+    "aggregator = flex_pool.aggregators\n",
+    "aggregator.map(collect_clients_weights_tf, selected_clients)"
    ]
   },
   {
@@ -186,6 +151,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from flex.pool.aggregators import fed_avg\n",
+    "\n",
     "aggregator.map(fed_avg)"
    ]
   },
@@ -195,6 +162,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from flex.pool.primitives import set_aggregated_weights_tf\n",
+    "\n",
     "aggregator.map(set_aggregated_weights_tf, server)"
    ]
   },
@@ -204,18 +173,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "server.map(deploy_server_model_tf, clients)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from flex.data import Dataset\n",
+    "from flex.pool.primitives import deploy_server_model_tf\n",
     "\n",
-    "test_examples, test_labels = test_data.X_data, test_data.y_data"
+    "server.map(deploy_server_model_tf, selected_clients)"
    ]
   },
   {
@@ -224,7 +184,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "server.map(evaluate_server_model_tf, test_data=test_examples, test_labels=test_labels)"
+    "from flex.pool.primitives import evaluate_server_model_tf\n",
+    "\n",
+    "test_examples, test_labels = test_data.X_data, test_data.y_data\n",
+    "metrics = server.map(evaluate_server_model_tf, test_data=test_examples, test_labels=test_labels)\n",
+    "loss, acc = metrics[0]\n",
+    "print(f\"Test acc: {acc:.4f}, test loss: {loss:.4f}\")"
    ]
   },
   {
@@ -233,17 +198,26 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def train_n_rounds(n_rounds, batch_size, epochs):  \n",
-    "    pool = FlexPool.client_server_architecture(fed_dataset=flex_dataset, init_func=init_server_model_tf, model=define_model())\n",
-    "    pool.servers.map(deploy_server_model_tf, pool.clients)\n",
+    "def train_n_rounds(n_rounds, batch_size, epochs, clients_per_round=20):  \n",
+    "    pool = FlexPool.client_server_architecture(fed_dataset=flex_dataset, init_func=init_server_model_tf, model=get_model())\n",
     "    for i in range(n_rounds):\n",
-    "        print(f\"\\nRunning round: {i}\\n\")\n",
-    "        pool.clients.map(train_tf, batch_size=batch_size, epochs=epochs)\n",
-    "        pool.aggregators.map(collect_clients_weights_tf, pool.clients)\n",
+    "        print(f\"\\nRunning round: {i+1} of {n_rounds+1}\")\n",
+    "        node_dropout = 1-(clients_per_round/len(pool.clients))\n",
+    "        selected_clients_pool = pool.clients.filter(node_dropout=node_dropout)\n",
+    "        selected_clients = selected_clients_pool.clients\n",
+    "        print(f\"Selected clients for this round: {len(selected_clients)}\")\n",
+    "        # Deploy the server model to the selected clients\n",
+    "        pool.servers.map(deploy_server_model_tf, selected_clients)\n",
+    "        # Each selected client trains her model\n",
+    "        selected_clients.map(train_tf, batch_size=batch_size, epochs=epochs, verbose=False)\n",
+    "        # The aggregador collects weights from the selected clients and aggregates them\n",
+    "        pool.aggregators.map(collect_clients_weights_tf, selected_clients)\n",
     "        pool.aggregators.map(fed_avg)\n",
+    "        # The aggregator send its aggregated weights to the server\n",
     "        pool.aggregators.map(set_aggregated_weights_tf, pool.servers)\n",
-    "        pool.servers.map(deploy_server_model_tf, pool.clients)\n",
-    "        pool.servers.map(evaluate_server_model_tf, test_data=test_examples, test_labels=test_labels)"
+    "        metrics = pool.servers.map(evaluate_server_model_tf, test_data=test_examples, test_labels=test_labels, verbose=False)\n",
+    "        loss, acc = metrics[0]\n",
+    "        print(f\"Server: Test acc: {acc:.4f}, test loss: {loss:.4f}\")"
    ]
   },
   {
@@ -252,7 +226,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "train_n_rounds(n_rounds=2, batch_size=512, epochs=5)"
+    "train_n_rounds(n_rounds=10, batch_size=512, epochs=5, clients_per_round=20)"
    ]
   }
  ],
@@ -272,7 +246,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.5"
+   "version": "3.9.16"
   },
   "orig_nbformat": 4,
   "vscode": {
