complete renaming of cdata to centralized_data

--- a/notebooks/Federate datasets from other libraries with FLEXible.ipynb
+++ b/notebooks/Federate datasets from other libraries with FLEXible.ipynb
@@ -1,6 +1,7 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -25,6 +26,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -45,6 +47,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -70,12 +73,13 @@
     "\n",
     "\n",
     "flex_dataset_two_step_hf = FedDataDistribution.from_config(\n",
-    "    cdata=fcd_hf, config=config_hf\n",
+    "    centralized_data=fcd_hf, config=config_hf\n",
     ")\n",
     "print(f\"Flex dataset two steps a data sample from client_0: {flex_dataset_two_step_hf['client_0'].X_data[0]}\")"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -97,6 +101,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -121,6 +126,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -144,7 +150,7 @@
     "\n",
     "# Federate the Dataset we just created\n",
     "flex_dataset_two_step_tf = FedDataDistribution.from_config(\n",
-    "    cdata=fcd_tf,\n",
+    "    centralized_data=fcd_tf,\n",
     "    config=config_tf\n",
     ")\n",
     "\n",
@@ -154,6 +160,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -180,6 +187,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -203,6 +211,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -225,7 +234,7 @@
     "\n",
     "# Federate the Dataset we just created\n",
     "flex_dataset_two_step_torch = FedDataDistribution.from_config(\n",
-    "    cdata=fcd_torch,\n",
+    "    centralized_data=fcd_torch,\n",
     "    config=config_torch\n",
     ")\n",
     "\n",
@@ -237,6 +246,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -263,6 +273,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -281,6 +292,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -304,7 +316,7 @@
     "\n",
     "# Federate the Dataset we just created\n",
     "flex_dataset_two_step_torch = FedDataDistribution.from_config(\n",
-    "    cdata=fcd_torch,\n",
+    "    centralized_data=fcd_torch,\n",
     "    config=config_torch\n",
     ")\n",
     "\n",
@@ -312,6 +324,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -333,6 +346,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
