--- a/notebooks/Federating data with FLEXible.ipynb
+++ b/notebooks/Federating data with FLEXible.ipynb
@@ -126,7 +126,7 @@
    "source": [
     "from flex.data import FedDataDistribution\n",
     "\n",
-    "federated_dataset = FedDataDistribution.from_config(cdata=train_dataset, config=config)"
+    "federated_dataset = FedDataDistribution.from_config(centralized_data=train_dataset, config=config)"
    ]
   },
   {
@@ -194,7 +194,7 @@
     "                            weights=normal_weights\n",
     "                        )\n",
     "\n",
-    "normal_federated_dataset = FedDataDistribution.from_config(cdata=train_dataset, config=config)"
+    "normal_federated_dataset = FedDataDistribution.from_config(centralized_data=train_dataset, config=config)"
    ]
   },
   {
@@ -302,7 +302,7 @@
    "source": [
     "from flex.data import FedDataDistribution\n",
     "\n",
-    "personalized_cifar_dataset = FedDataDistribution.from_config(cdata=cifar10_dataset, config=config)"
+    "personalized_cifar_dataset = FedDataDistribution.from_config(centralized_data=cifar10_dataset, config=config)"
    ]
   },
   {
@@ -446,7 +446,7 @@
     "\n",
     "\n",
     "flex_dataset_two_step_hf = FedDataDistribution.from_config(\n",
-    "    cdata=fcd_hf, config=config_hf\n",
+    "    centralized_data=fcd_hf, config=config_hf\n",
     ")\n",
     "# print(f\"Flex dataset two steps a data sample from client_0: {flex_dataset_two_step_hf['client_0'].X_data[0]}\") # DEPRETATED\n",
     "print(f\"Flex dataset two steps a data sample from client_0: {flex_dataset_two_step_hf[0].X_data[0]}\")"
@@ -522,7 +522,7 @@
     "\n",
     "# Federate the Dataset we just created\n",
     "flex_dataset_two_step_tf = FedDataDistribution.from_config(\n",
-    "    cdata=fcd_tf,\n",
+    "    centralized_data=fcd_tf,\n",
     "    config=config_tf\n",
     ")\n",
     "\n",
@@ -604,7 +604,7 @@
     "\n",
     "# Federate the Dataset we just created\n",
     "flex_dataset_two_step_torch = FedDataDistribution.from_config(\n",
-    "    cdata=fcd_torch,\n",
+    "    centralized_data=fcd_torch,\n",
     "    config=config_torch\n",
     ")\n",
     "\n",
@@ -681,7 +681,7 @@
     "\n",
     "# Federate the Dataset we just created\n",
     "flex_dataset_two_step_torch = FedDataDistribution.from_config(\n",
-    "    cdata=fcd_torch,\n",
+    "    centralized_data=fcd_torch,\n",
     "    config=config_torch\n",
     ")\n",
     "\n",
