--- a/notebooks/flex_text_classification_tensorflow_with_decorators.ipynb
+++ b/notebooks/flex_text_classification_tensorflow_with_decorators.ipynb
@@ -53,7 +53,7 @@
     "config.n_clients = 2\n",
     "config.replacement = False # ensure that clients do not share any data\n",
     "config.client_names = ['client1', 'client2'] # Optional\n",
-    "flex_dataset = FedDataDistribution.from_config(cdata=flex_data, config=config)"
+    "flex_dataset = FedDataDistribution.from_config(centralized_data=flex_data, config=config)"
    ]
   },
   {
