--- a/notebooks/flex_text_generation_torch_demo.ipynb
+++ b/notebooks/flex_text_generation_torch_demo.ipynb
@@ -210,15 +210,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cdata = Dataset(X)\n",
+    "centralized_data = Dataset(X)\n",
     "config = FedDatasetConfig(seed=0)\n",
     "config.n_clients = 2\n",
     "config.replacement = False # ensure that clients do not share any data\n",
     "config.client_names = ['client1', 'client2']\n",
     "# config.weights = [0.2] * config.n_clients # each client has only 20% of its assigned class\n",
     "config.weights = None\n",
-    "fld = FedDataDistribution.from_config(cdata=cdata, config=config)\n",
-    "#fld = FedDataDistribution.iid_distribution(cdata=cdata)"
+    "fld = FedDataDistribution.from_config(centralized_data=centralized_data, config=config)\n",
+    "#fld = FedDataDistribution.iid_distribution(centralized_data=centralized_data)"
    ]
   },
   {
