improve federated_mnist to return only labels properly both in train and test

--- a/notebooks/flex_mnist_classification_tensorflow_simplified.ipynb
+++ b/notebooks/flex_mnist_classification_tensorflow_simplified.ipynb
@@ -44,20 +44,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from flex.data import Dataset\n",
     "from flex.datasets import load\n",
     "\n",
-    "import numpy as np\n",
-    "\n",
-    "flex_dataset, test_data = load(\"federated_emnist\", return_test=True, split=\"digits\")\n",
-    "\n",
-    "def remove_writer_from_y_data(client_dataset: Dataset):\n",
-    "    new_x_data = client_dataset.X_data\n",
-    "    new_y_data = np.asarray([y[0] for y in client_dataset.y_data])  # each label is a tuple (mnist_label, writer), so we remove the writer\n",
-    "    return Dataset(new_x_data, new_y_data)\n",
-    "\n",
-    "flex_dataset = flex_dataset.map(remove_writer_from_y_data)\n",
-    "test_data = remove_writer_from_y_data(test_data)\n"
+    "flex_dataset, test_data = load(\"federated_emnist\", return_test=True, split=\"digits\")\n"
    ]
   },
   {
@@ -215,7 +204,7 @@
     "        pool.aggregators.map(fed_avg)\n",
     "        # The aggregator send its aggregated weights to the server\n",
     "        pool.aggregators.map(set_aggregated_weights_tf, pool.servers)\n",
-    "        metrics = pool.servers.map(evaluate_server_model_tf, test_data=test_examples, test_labels=test_labels, verbose=False)\n",
+    "        metrics = pool.servers.map(evaluate_server_model_tf, test_data=test_examples, test_labels=test_labels)\n",
     "        loss, acc = metrics[0]\n",
     "        print(f\"Server: Test acc: {acc:.4f}, test loss: {loss:.4f}\")"
    ]
@@ -228,6 +217,13 @@
    "source": [
     "train_n_rounds(n_rounds=10, batch_size=512, epochs=5, clients_per_round=20)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
