reform federated datasets that include many labels, to remove them from the test data

--- a/notebooks/flex_mnist_classification_tensorflow_simplified.ipynb
+++ b/notebooks/flex_mnist_classification_tensorflow_simplified.ipynb
@@ -46,7 +46,7 @@
    "source": [
     "from flex.datasets import load\n",
     "\n",
-    "flex_dataset, test_data = load(\"federated_emnist\", return_test=True, split=\"digits\")\n"
+    "flex_dataset, test_data = load(\"federated_emnist\", return_test=True, split=\"digits\")"
    ]
   },
   {
