Notebook with primitives finished

--- a/notebooks/Federated MNIST example with TF primitives.ipynb
+++ b/notebooks/Federated MNIST example with TF primitives.ipynb
@@ -182,6 +182,16 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Run the federated learning experiment for a few rounds\n",
+    "\n",
+    "Now, we can summarize the steps provided above and run the federated experiment for multiple rounds:"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
