--- a/notebooks/Federated MNIST TF example with simplified primitives.ipynb
+++ b/notebooks/Federated MNIST TF example with simplified primitives.ipynb
@@ -20,7 +20,7 @@
     "- Define the model to train: It's necessary to tell server and clients which model will be trained.\n",
     "- Aggregator method: In this notebook we will implement FedAvg as the aggregation function.\n",
     "\n",
-    "Note that the primitive functions that we offer are basics functions, as we assume how the federated learning training will be. If you want to do a more customizable training loop, please check the notebook flex_text_classifiication_tensorflow_demo, as we show there how to implement the primitive functions from scrach. We will follow this [tutorial](https://www.tensorflow.org/tutorials/quickstart/beginner?hl=es-419) from Tensorfllow 2.0 Guide for begginers. "
+    "Note that the primitive functions that we offer are basics functions, as we assume how the federated learning training will be. If you want to do a more customizable training loop, please check the notebook flex_text_classification_tensorflow_demo, as we show there how to implement the primitive functions from scrach. We will follow this [tutorial](https://www.tensorflow.org/tutorials/quickstart/beginner?hl=es-419) from Tensorfllow 2.0 Guide for begginers. "
    ]
   },
   {
@@ -79,7 +79,13 @@
     "                metrics=['accuracy'])\n",
     "    return model\n",
     "\n",
-    "flex_pool = FlexPool.client_server_architecture(fed_dataset=flex_dataset, init_func=init_server_model_tf, model=get_model())"
+    "flex_pool = FlexPool.client_server_architecture(fed_dataset=flex_dataset, init_func=init_server_model_tf, model=get_model())\n",
+    "\n",
+    "clients = flex_pool.clients\n",
+    "server = flex_pool.servers\n",
+    "aggregator = flex_pool.aggregators\n",
+    "\n",
+    "print(f\"Number of nodes in the pool {len(flex_pool)}: {len(server)} server plus {len(clients)} clients. The server is also an aggregator\")"
    ]
   },
   {
@@ -90,14 +96,12 @@
    "source": [
     "#Filter clients\n",
     "clients_per_round=20\n",
-    "node_dropout = 1-(clients_per_round/len(flex_pool.clients))\n",
-    "selected_clients_pool = flex_pool.clients.filter(node_dropout=node_dropout)\n",
+    "node_dropout = 1-(clients_per_round/len(clients))\n",
+    "selected_clients_pool = clients.filter(node_dropout=node_dropout)\n",
     "selected_clients = selected_clients_pool.clients\n",
-    "total_clients = flex_pool.clients\n",
-    "server = flex_pool.servers\n",
     "\n",
     "print(f\"Server node is indentified by key \\\"{server.actor_ids[0]}\\\"\")\n",
-    "print(f\"Selected {len(selected_clients.actor_ids)} client nodes of a total of {len(total_clients.actor_ids)}\")"
+    "print(f\"Selected {len(selected_clients.actor_ids)} client nodes of a total of {len(clients.actor_ids)}\")"
    ]
   },
   {
@@ -225,15 +229,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "train_n_rounds(n_rounds=10, batch_size=512, epochs=5, clients_per_round=20)"
+    "train_n_rounds(n_rounds=5, batch_size=512, epochs=5, clients_per_round=20)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
